--- a/nav.html
+++ b/nav.html
@@ -49,7 +49,7 @@
                                             <a >
                                                 <img width="40px" data-src="images/analyst.png"  src="images/blank.jpg" class="lazy center-img-top" />
                                                 <div class="text-menu1-div" >
-                                                    Tentang Saya
+                                                    About Me
                                                 </div>
                                             </a>
                                         </div>
@@ -57,7 +57,7 @@
                                             <a >
                                                 <img width="40px" data-src="images/school.png"  src="images/blank.jpg" class="lazy center-img-top" />
                                                 <div class="text-menu1-div" >
-                                                    Sekolah
+                                                    Education
                                                 </div>
                                             </a>
                                         </div>
@@ -65,7 +65,7 @@
                                             <a >
                                                 <img width="40px" data-src="images/work.png"  src="images/blank.jpg" class="lazy center-img-top" />
                                                 <div class="text-menu1-div" >
-                                                    Pengalaman
+                                                    Work Experience
                                                 </div>
                                             </a>
                                         </div>  
@@ -77,7 +77,7 @@
                                             <a>
                                                 <img width="40px" data-src="images/contact.png"  src="images/blank.jpg" class="lazy center-img-top" />
                                                 <div class="text-menu1-div" >
-                                                    Kontak Saya
+                                                    Contact
                                                 </div>
                                             </a>
                                         </div>
@@ -85,7 +85,7 @@
                                             <a href="https://dev.to/meprasetyo">
                                                 <img width="40px" data-src="images/analyst.png"  src="images/blank.jpg" class="lazy center-img-top" />
                                                 <div class="text-menu1-div" >
-                                                    Grup Dev
+                                                    My Group
                                                 </div>
                                             </a>
                                         </div>
@@ -129,7 +129,7 @@
                                 </li>
                                     <div class="background-grey1">
                                         <div class="menu-link-account" style="float: right;">
-                                            <a href="profile"><button class="btn btn-light">Biodata</button></a>
+                                            <a href="profile"><button class="btn btn-light">Bio</button></a>
                                         </div>
                                     </div>
                                 <li>
