--- a/cv/index.html
+++ b/cv/index.html
@@ -103,13 +103,13 @@
         <div class="collapse navbar-collapse" id="main-navbar">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a href="https://meprasetyo.github.io/" class="nav-link" data-animate="scrolling">Home</a>
+              <a href="https://meprasetyo02.github.io/" class="nav-link" data-animate="scrolling">Home</a>
             </li>
             <li class="nav-item">
-              <a href="https://meprasetyo.github.io/" class="nav-link" data-animate="scrolling">About</a>
+              <a href="https://meprasetyo02.github.io/" class="nav-link" data-animate="scrolling">About</a>
             </li>
             <li class="nav-item">
-              <a href="https://meprasetyo.github.io/project/" class="nav-link" data-animate="scrolling">Portfolio</a>
+              <a href="https://meprasetyo02.github.io/project/" class="nav-link" data-animate="scrolling">Portfolio</a>
             </li>
           </ul>
           <ul class="nav ml-auto">
